# tdd-katas

./: .gitignore  LICENSE  README.md
.github/workflows/: js-test.yaml  js-ui-deploy.yaml  test-js.yaml  test-python.yaml
.github/workflows/disabled/: test-python.yaml
calculator/calculator-front-end/: .npmrc  Dockerfile  README.md  app.config.js  app.json  babel.config.js  package-lock.json  package.json
calculator/calculator-front-end/__tests__/: parse-test.tsx
calculator/calculator-front-end/app/: index.tsx  parse.tsx
calculator/fraction-lib/: Makefile  README.md  package-lock.json  package.json
calculator/fraction-lib/src/: fraction.js
calculator/fraction-lib/test/: add_fraction.test.js  equal_fraction.test.js  fraction.test.js  fraction_initialization.test.js
calculator/math-lib/: package-lock.json  package.json
calculator/math-lib/src/: fraction.js  number_theory.js
calculator/math-lib/test/: add_fraction.test.js  add_fractions.test.js  add_fractions_as_integers.test.js  fractions_equal.test.js  greatest_common_divisor.test.js  handle_errors.test.js  miscellaneous.test.js  multiply_as_integers.test.js  negative_fractions.test.js  reduce_fraction.test.js  template.test.js  to_string.js  x_template.test.js
mars-rovers/: README.md
mars-rovers/python-mars-rovers/: README.md  pyproject.toml
mars-rovers/python-mars-rovers/python_mars_rovers/: gui.py  plateau.py
mars-rovers/python-mars-rovers/tests/: test_plateau.py
